--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,46 @@
-/* You can add global styles to this file, and also import other style files */
+
+@import "@angular/material/theming";
+@include mat-core();
+
+$color-primary: mat-palette($mat-red, 100, 200);
+$color-accent: mat-palette($mat-teal, 900, 800, 700);
+$color-warn: mat-palette($mat-red, A700);
+
+$custom-theme: mat-light-theme($color-primary, $color-accent, $color-warn);
+$my-color: map-get($color-primary, 200);
+$bg: #ffefea;
+
+@include angular-material-theme($custom-theme);
+
+html,
+body {
+  height: 100%;
+  font-family: 'Poppins', sans-serif;
+  background-color: $bg;
+}
+
+body {
+  margin: 0;
+  background-color: $bg;
+}
+
+.mat-form-field, .mat-select{
+  width: 24rem;
+  margin: 0;
+}
+
+.mat-raised-button{
+  font-family: 'Poppins', sans-serif;
+  font-weight: 600;
+}
+
+.pink-snackbar{
+  background-color: mat-color($color-accent, 900);
+  color: $bg;
+  width: 30%;
+  position: fixed;
+  top: 40%;
+  left: 35%;
+  text-align: center;
+  font-size: 30px !important;
+}
