parallax parte 1 feita

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,44 @@
-<div class="example-button-row">
-  <button mat-raised-button>Basic</button>
-  <button mat-raised-button color="primary">Primary</button>
-  <button mat-raised-button color="accent">Accent</button>
-  <button mat-raised-button color="warn">Warn</button>
-  <button mat-raised-button disabled>Disabled</button>
-  <a mat-raised-button href="https://www.google.com/" target="_blank">Link</a>
+<!-- <div class="container-1">
+    <mat-card class="card-container-1 mat-elevation-z10">
+      <mat-card-title>Bianca Klein Schmitt</mat-card-title>
+      <mat-card-subtitle>Desenvolvedora Web Full Stack</mat-card-subtitle>
+    </mat-card>
 </div>
-<button type="button" class="btn btn-primary">Primary</button>
-<button type="button" class="btn btn-secondary">Secondary</button>
-<button type="button" class="btn btn-success">Success</button>
-<button type="button" class="btn btn-danger">Danger</button>
-<button type="button" class="btn btn-warning">Warning</button>
-<button type="button" class="btn btn-info">Info</button>
-<button type="button" class="btn btn-light">Light</button>
+
+<div class="container-2">
+  <section>
+
+  </section>
+</div>
+
+<div>
+  <section>
+
+  </section>
+</div> -->
+<div class="parallax">
+  <div class="parallax-item p-item-1">oi</div>
+  <div class="parallax-item p-item-2"></div>
+  <div class="parallax-item p-item-3"></div>
+  <div class="parallax-item p-item-4"></div>
+</div>
+
+<div class="content">
+  <div class="content-header">
+    <h1>Bianca Klein Schmitt</h1>
+    <h2>Full Stack Web Developer</h2>
+  </div>
+
+  <div class="about-me">
+    <h2>Quem sou eu?</h2>
+  </div>
+</div>
+
+<!-- <div class="container-card">
+  <mat-card>
+    <mat-card-title>Oi</mat-card-title>
+    <mat-card-subtitle>teste</mat-card-subtitle>
+  </mat-card>
+</div> -->
 
 <router-outlet></router-outlet>
