--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,44 +1,3 @@
-<!-- <div class="container-1">
-    <mat-card class="card-container-1 mat-elevation-z10">
-      <mat-card-title>Bianca Klein Schmitt</mat-card-title>
-      <mat-card-subtitle>Desenvolvedora Web Full Stack</mat-card-subtitle>
-    </mat-card>
-</div>
+<app-navbar></app-navbar>
 
-<div class="container-2">
-  <section>
-
-  </section>
-</div>
-
-<div>
-  <section>
-
-  </section>
-</div> -->
-<div class="parallax">
-  <div class="parallax-item p-item-1">oi</div>
-  <div class="parallax-item p-item-2"></div>
-  <div class="parallax-item p-item-3"></div>
-  <div class="parallax-item p-item-4"></div>
-</div>
-
-<div class="content">
-  <div class="content-header">
-    <h1>Bianca Klein Schmitt</h1>
-    <h2>Full Stack Web Developer</h2>
-  </div>
-
-  <div class="about-me">
-    <h2>Quem sou eu?</h2>
-  </div>
-</div>
-
-<!-- <div class="container-card">
-  <mat-card>
-    <mat-card-title>Oi</mat-card-title>
-    <mat-card-subtitle>teste</mat-card-subtitle>
-  </mat-card>
-</div> -->
-
-<router-outlet></router-outlet>
+  <router-outlet></router-outlet>
