--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,11 +1,5 @@
-<!-- <mat-grid-list cols="2" rowHeight="2:1">
-  <mat-grid-tile>1</mat-grid-tile>
-  <mat-grid-tile>2</mat-grid-tile>
-  <mat-grid-tile>3</mat-grid-tile>
-  <mat-grid-tile>4</mat-grid-tile>
-</mat-grid-list> -->
-<mat-grid-list cols="7" rowHeight="1:2">
-  <!-- projeto 1 -->
+<!-- <mat-grid-list cols="7" rowHeight="1:2">
+
   <mat-grid-tile colspan="3">
     <mat-grid-tile-header>Jana Zdebskyi Psicóloga</mat-grid-tile-header>
   </mat-grid-tile>
@@ -16,7 +10,7 @@
     <mat-grid-tile-header>Tile 3</mat-grid-tile-header>
   </mat-grid-tile>
 
-  <!--projeto 2-->
+
   <mat-grid-tile colspan="3">
     <mat-grid-tile-header>BiShop</mat-grid-tile-header>
   </mat-grid-tile>
@@ -24,7 +18,7 @@
     <mat-grid-tile-header>Tile 1</mat-grid-tile-header>
   </mat-grid-tile>
 
-  <!--projeto 3-->
+
   <mat-grid-tile colspan="3">
     <mat-grid-tile-header>Course Manager</mat-grid-tile-header>
   </mat-grid-tile>
@@ -32,7 +26,7 @@
     <mat-grid-tile-header>Tile 1</mat-grid-tile-header>
   </mat-grid-tile>
 
-  <!--projeto 4-->
+
   <mat-grid-tile colspan="3">
     <mat-grid-tile-header>SoulBank</mat-grid-tile-header>
   </mat-grid-tile>
@@ -40,7 +34,7 @@
     <mat-grid-tile-header>Tile 1</mat-grid-tile-header>
   </mat-grid-tile>
 
-  <!--projeto 5-->
+
   <mat-grid-tile colspan="3">
     <mat-grid-tile-header>MyDoc</mat-grid-tile-header>
   </mat-grid-tile>
@@ -48,7 +42,7 @@
     <mat-grid-tile-header>Tile 1</mat-grid-tile-header>
   </mat-grid-tile>
 
-  <!--projeto 6-->
+
   <mat-grid-tile colspan="3">
     <mat-grid-tile-header>OpenBook</mat-grid-tile-header>
   </mat-grid-tile>
@@ -56,13 +50,75 @@
     <mat-grid-tile-header>Tile 1</mat-grid-tile-header>
   </mat-grid-tile>
 
-  <!--projeto 7-->
+
   <mat-grid-tile colspan="3">
     <mat-grid-tile-header>Produtos da Terra</mat-grid-tile-header>
   </mat-grid-tile>
   <mat-grid-tile colspan="3">
     <mat-grid-tile-header>Tile 1</mat-grid-tile-header>
   </mat-grid-tile>
+</mat-grid-list> -->
 
+<section class="timeline-section">
+	<div class="timeline-items">
+		<div class="timeline-item">
+			<div class="timeline-dot"></div>
+			<div class="timeline-date">2015</div>
+			<div class="timeline-content">
+				<h3>timeline item title</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+			</div>
+		</div>
+		<div class="timeline-item">
+			<div class="timeline-dot"></div>
+			<div class="timeline-date">2016</div>
+			<div class="timeline-content">
+				<h3>timeline item title</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+			</div>
+		</div>
+		<div class="timeline-item">
+			<div class="timeline-dot"></div>
+			<div class="timeline-date">2017</div>
+			<div class="timeline-content">
+				<h3>timeline item title</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+			</div>
+		</div>
+		<div class="timeline-item">
+			<div class="timeline-dot"></div>
+			<div class="timeline-date">2018</div>
+			<div class="timeline-content">
+				<h3>timeline item title</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+			</div>
+		</div>
+		<div class="timeline-item">
+			<div class="timeline-dot"></div>
+			<div class="timeline-date">2019</div>
+			<div class="timeline-content">
+				<h3>timeline item title</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+			</div>
+		</div>
+		<div class="timeline-item">
+			<div class="timeline-dot"></div>
+			<div class="timeline-date">2020</div>
+			<div class="timeline-content">
+				<h3>timeline item title</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+			</div>
+		</div>
+		<div class="timeline-item">
+			<div class="timeline-dot"></div>
+			<div class="timeline-date">2021</div>
+			<div class="timeline-content">
+				<h3>timeline item title</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+      <app-button></app-button>
+      </div>
 
-</mat-grid-list>
+		</div>
+	</div>
+</section>
+
