--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,7 +23,7 @@ body {
 }
 
 mat-grid-tile {
-  background: rgb(42, 121, 148);
+  background: rgba(42, 121, 148, 0.733);
 }
 .mat-form-field, .mat-select{
   width: 24rem;
