--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -4,12 +4,11 @@ nav{
 }
 
 .navbar-light .navbar-toggler{
-  background-color: blue;
+  background-color: #ff33a3;
 }
 
 svg:hover{
-  fill: rgb(255, 0, 0);
-  transform: scale(1.5);
-
+  fill: #ff33a3;
+  transform: scale(1.2);
 }
 
