--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,124 +1,298 @@
-<!-- <mat-grid-list cols="7" rowHeight="1:2">
-
-  <mat-grid-tile colspan="3">
-    <mat-grid-tile-header>Jana Zdebskyi Psicóloga</mat-grid-tile-header>
-  </mat-grid-tile>
-
-  <mat-grid-tile rowspan="7">
-  </mat-grid-tile>
-  <mat-grid-tile colspan="3">
-    <mat-grid-tile-header>Tile 3</mat-grid-tile-header>
-  </mat-grid-tile>
-
-
-  <mat-grid-tile colspan="3">
-    <mat-grid-tile-header>BiShop</mat-grid-tile-header>
-  </mat-grid-tile>
-  <mat-grid-tile colspan="3">
-    <mat-grid-tile-header>Tile 1</mat-grid-tile-header>
-  </mat-grid-tile>
-
-
-  <mat-grid-tile colspan="3">
-    <mat-grid-tile-header>Course Manager</mat-grid-tile-header>
-  </mat-grid-tile>
-  <mat-grid-tile colspan="3">
-    <mat-grid-tile-header>Tile 1</mat-grid-tile-header>
-  </mat-grid-tile>
-
-
-  <mat-grid-tile colspan="3">
-    <mat-grid-tile-header>SoulBank</mat-grid-tile-header>
-  </mat-grid-tile>
-  <mat-grid-tile colspan="3">
-    <mat-grid-tile-header>Tile 1</mat-grid-tile-header>
-  </mat-grid-tile>
-
-
-  <mat-grid-tile colspan="3">
-    <mat-grid-tile-header>MyDoc</mat-grid-tile-header>
-  </mat-grid-tile>
-  <mat-grid-tile colspan="3">
-    <mat-grid-tile-header>Tile 1</mat-grid-tile-header>
-  </mat-grid-tile>
-
-
-  <mat-grid-tile colspan="3">
-    <mat-grid-tile-header>OpenBook</mat-grid-tile-header>
-  </mat-grid-tile>
-  <mat-grid-tile colspan="3">
-    <mat-grid-tile-header>Tile 1</mat-grid-tile-header>
-  </mat-grid-tile>
-
-
-  <mat-grid-tile colspan="3">
-    <mat-grid-tile-header>Produtos da Terra</mat-grid-tile-header>
-  </mat-grid-tile>
-  <mat-grid-tile colspan="3">
-    <mat-grid-tile-header>Tile 1</mat-grid-tile-header>
-  </mat-grid-tile>
-</mat-grid-list> -->
-
 <section class="timeline-section">
-	<div class="timeline-items">
-		<div class="timeline-item">
-			<div class="timeline-dot"></div>
-			<div class="timeline-date">2015</div>
-			<div class="timeline-content">
-				<h3>timeline item title</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-			</div>
-		</div>
-		<div class="timeline-item">
-			<div class="timeline-dot"></div>
-			<div class="timeline-date">2016</div>
-			<div class="timeline-content">
-				<h3>timeline item title</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-			</div>
-		</div>
-		<div class="timeline-item">
-			<div class="timeline-dot"></div>
-			<div class="timeline-date">2017</div>
-			<div class="timeline-content">
-				<h3>timeline item title</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-			</div>
-		</div>
-		<div class="timeline-item">
-			<div class="timeline-dot"></div>
-			<div class="timeline-date">2018</div>
-			<div class="timeline-content">
-				<h3>timeline item title</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-			</div>
-		</div>
-		<div class="timeline-item">
-			<div class="timeline-dot"></div>
-			<div class="timeline-date">2019</div>
-			<div class="timeline-content">
-				<h3>timeline item title</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-			</div>
-		</div>
-		<div class="timeline-item">
-			<div class="timeline-dot"></div>
-			<div class="timeline-date">2020</div>
-			<div class="timeline-content">
-				<h3>timeline item title</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-			</div>
-		</div>
-		<div class="timeline-item">
-			<div class="timeline-dot"></div>
-			<div class="timeline-date">2021</div>
-			<div class="timeline-content">
-				<h3>timeline item title</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-      <app-button></app-button>
-      </div>
+  <div class="timeline-items">
+    <div class="timeline-item">
+      <div class="timeline-dot"></div>
+      <div class="timeline-date">04/2022</div>
+      <mat-card class="timeline-content">
+        <mat-card-header>
+          <mat-card-title>Jana Zdebskyi Psicóloga</mat-card-title>
+          <mat-card-subtitle>The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from
+            Japan. A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally bred
+            for hunting.</mat-card-subtitle>
+        </mat-card-header>
+        <div mat-card-image>
+          <div id="jana-carousel" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active" data-bs-interval="2000">
+                <img src="../../../assets/img/jana-zdebskyi/jana-1.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item" data-bs-interval="2000">
+                <img src="../../../assets/img/jana-zdebskyi/jana-2.png" class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#jana-carousel" data-bs-slide="prev">
+              <span class="material-icons">
+                arrow_back_ios
+              </span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#jana-carousel" data-bs-slide="next">
+              <span class="material-icons">
+                arrow_forward_ios
+              </span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
+        <mat-card-actions>
+          <app-button></app-button>
+        </mat-card-actions>
+      </mat-card>
+    </div>
 
-		</div>
-	</div>
+    <div class="timeline-item">
+      <div class="timeline-dot"></div>
+      <div class="timeline-date">2021</div>
+      <mat-card class="timeline-content">
+        <mat-card-header>
+          <mat-card-title>BiShop</mat-card-title>
+          <mat-card-subtitle>The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from
+            Japan. A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally bred
+            for hunting.</mat-card-subtitle>
+        </mat-card-header>
+        <div mat-card-image>
+          <div id="bi-shop-carousel" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active" data-bs-interval="2000">
+                <img src="../../../assets/img/bi-shop/bishop-funcionarios.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item" data-bs-interval="2000">
+                <img src="../../../assets/img/bi-shop/bishop-atribuir-supervisao.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item" data-bs-interval="2000">
+                <img src="../../../assets/img/bi-shop/bishop-validacao.png" class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#bi-shop-carousel" data-bs-slide="prev">
+              <span class="material-icons">
+                arrow_back_ios
+              </span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#bi-shop-carousel" data-bs-slide="next">
+              <span class="material-icons">
+                arrow_forward_ios
+              </span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
+        <mat-card-actions>
+          <app-button
+            [hrefLink]="'https://javascript.plainenglish.io/personal-portfolio-using-angular-8-and-bootstrap-5dde6fc7cf9b'">
+          </app-button>
+        </mat-card-actions>
+      </mat-card>
+    </div>
+    <div class="timeline-item">
+      <div class="timeline-dot"></div>
+      <div class="timeline-date">03/2002</div>
+      <mat-card class="timeline-content">
+        <mat-card-header>
+          <mat-card-title>Course-Manager</mat-card-title>
+          <mat-card-subtitle>The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from
+            Japan. A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally bred
+            for hunting.</mat-card-subtitle>
+        </mat-card-header>
+        <div mat-card-image>
+          <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active" data-bs-interval="2000">
+                <img src="../../../assets/img/course-manager/course-manager-edit.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item" data-bs-interval="2000">
+                <img src="../../../assets/img/course-manager/course-manager-filter.png" class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
+              data-bs-slide="prev">
+              <span class="material-icons">
+                arrow_back_ios
+              </span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval"
+              data-bs-slide="next">
+              <span class="material-icons">
+                arrow_forward_ios
+              </span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
+        <mat-card-actions>
+          <app-button></app-button>
+        </mat-card-actions>
+      </mat-card>
+    </div>
+    <div class="timeline-item">
+      <div class="timeline-dot"></div>
+      <div class="timeline-date">2021</div>
+      <mat-card class="timeline-content">
+        <mat-card-header>
+          <mat-card-title>SoulBank</mat-card-title>
+          <mat-card-subtitle>
+            The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from
+            Japan. A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally bred
+            for hunting.
+          </mat-card-subtitle>
+        </mat-card-header>
+        <div mat-card-image>
+          <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active" data-bs-interval="2000">
+                <img src="../../../assets/img/bank/login.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item" data-bs-interval="2000">
+                <img src="../../../assets/img/bank/cadastro.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item" data-bs-interval="2000">
+                <img src="../../../assets/img/bank/user.png" class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
+              data-bs-slide="prev">
+              <span class="material-icons">
+                arrow_back_ios
+              </span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval"
+              data-bs-slide="next">
+              <span class="material-icons">
+                arrow_forward_ios
+              </span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
+        <mat-card-actions>
+          <app-button></app-button>
+        </mat-card-actions>
+      </mat-card>
+    </div>
+    <div class="timeline-item">
+      <div class="timeline-dot"></div>
+      <div class="timeline-date">2021</div>
+      <mat-card class="timeline-content">
+        <mat-card-header>
+          <mat-card-title>MyDoc</mat-card-title>
+          <mat-card-subtitle>The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from
+            Japan. A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally bred
+            for hunting.</mat-card-subtitle>
+        </mat-card-header>
+        <div mat-card-image>
+          <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active" data-bs-interval="2000">
+                <img src="../../../assets/img/jana-zdebskyi/jana-1.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item" data-bs-interval="2000">
+                <img src="../../../assets/img/jana-zdebskyi/jana-2.png" class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
+              data-bs-slide="prev">
+              <span class="material-icons">
+                arrow_back_ios
+              </span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval"
+              data-bs-slide="next">
+              <span class="material-icons">
+                arrow_forward_ios
+              </span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
+        <mat-card-actions>
+          <app-button></app-button>
+        </mat-card-actions>
+      </mat-card>
+    </div>
+    <div class="timeline-item">
+      <div class="timeline-dot"></div>
+      <div class="timeline-date">2021</div>
+      <mat-card class="timeline-content">
+        <mat-card-header>
+          <mat-card-title>OpenBook</mat-card-title>
+          <mat-card-subtitle>The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from
+            Japan. A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally bred
+            for hunting.</mat-card-subtitle>
+        </mat-card-header>
+        <div mat-card-image>
+          <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active" data-bs-interval="2000">
+                <img src="../../../assets/img/jana-zdebskyi/jana-1.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item" data-bs-interval="2000">
+                <img src="../../../assets/img/jana-zdebskyi/jana-2.png" class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
+              data-bs-slide="prev">
+              <span class="material-icons">
+                arrow_back_ios
+              </span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval"
+              data-bs-slide="next">
+              <span class="material-icons">
+                arrow_forward_ios
+              </span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
+        <mat-card-actions>
+          <app-button></app-button>
+        </mat-card-actions>
+      </mat-card>
+    </div>
+    <div class="timeline-item">
+      <div class="timeline-dot"></div>
+      <div class="timeline-date">2021</div>
+      <mat-card class="timeline-content">
+        <mat-card-header>
+          <mat-card-title>Produtos da Terra</mat-card-title>
+          <mat-card-subtitle>The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from
+            Japan. A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally bred
+            for hunting.</mat-card-subtitle>
+        </mat-card-header>
+        <div mat-card-image>
+          <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active" data-bs-interval="2000">
+                <img src="../../../assets/img/jana-zdebskyi/jana-1.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item" data-bs-interval="2000">
+                <img src="../../../assets/img/jana-zdebskyi/jana-2.png" class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
+              data-bs-slide="prev">
+              <span class="material-icons">
+                arrow_back_ios
+              </span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval"
+              data-bs-slide="next">
+              <span class="material-icons">
+                arrow_forward_ios
+              </span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
+        <mat-card-actions>
+          <app-button></app-button>
+        </mat-card-actions>
+      </mat-card>
+    </div>
+  </div>
 </section>
-
